[tool.poetry]
name = "session-funnel-dashboard"
version = "0.1.0"
description = ""
authors = ["Ramnath Vaidyanathan <ramnath.vaidya@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.2.0"
plotly = "^5.4.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
